--- a/applications/WebMod/static/css/myapp.css
+++ b/applications/WebMod/static/css/myapp.css
@@ -66,3 +66,9 @@ h3 {
    background: linear-gradient(#d98200, #ffe0b3);
    text-decoration: none;
 }
+
+.inner{
+   border-radius:5px;
+   background:#111;
+   padding:5px;
+}
