Mostly Complete Search
The search function appears to be working other than some edge cases.
Doesn't currently display anything.

--- a/applications/WebMod/views/default/search.html
+++ b/applications/WebMod/views/default/search.html
@@ -25,11 +25,10 @@
 
 <html>
 
-
+<body style="background: linear-gradient(#212229, #000000);">
     <div id="target" style="background: linear-gradient(#212229, #000000);"></div>
-
+</body>
     <script id="template" type="text/ractive">
-    <body style="background: linear-gradient(#212229, #000000);">
                 <div><input type="text" id="search" name="Search" value=""/>
                 <select id="search_type">
                     <option value="name">Model</option>
@@ -37,10 +36,6 @@
                     <option value="tag_list">Tag</option>
                 </select>
                 <div class="orange_btn" on-click="beginSearch">Search</div></div>
-    </body>
-        {% #model_dict:name %}
-        {% thumbnail %}
-        {% /model_dict %}
     </script>
     <script>
         $(function() {
@@ -58,18 +53,21 @@
             });
 
             MAIN.on("beginSearch", function() {
-                var search = $("search").value;
-                var search_type = $("search_type").value;
+                var search = document.getElementById("search").value;
+                var search_type = document.getElementById("search_type").value;
+                MAIN.set('content', search);
+                MAIN.set('search_type', search_type);
                 if(search){
-                    $.ajax("{{=URL('default', 'search_stuff', args=['search','search_type'])}}",
+                    $.ajax("{{=URL('default', 'search_stuff', args=['content', 'search_type'])}}",
                         {
                             data:{
-                                search: search,
-                                search_type: search_type
+                                content: MAIN.get('content'),
+                                search_type: MAIN.get('search_type')
                             },
                             method: 'POST',
                             success: function (data) {
                                 MAIN.set('model_dict', data['model']);
+                                console.log(MAIN.get('model_dict'));
                             }
                         }
                     );
