--- a/applications/WebMod/static/css/myapp.css
+++ b/applications/WebMod/static/css/myapp.css
@@ -35,7 +35,6 @@ h3 {
 }
 
 .orange_btn {
-    float:left;
     text-align:center;
     background: linear-gradient(#d98200, #663d00);
     border-radius:10%;
@@ -74,9 +73,14 @@ h3 {
    padding:5px;
    height:450px;
    text-align:center;
+   color: white;
 }
 
-.innerEmptry{
+.inner h3{
+   color:#D98200;
+}
+
+.innerEmpty{
    border-radius:5px;
    border:solid;
    border-color:#111;
